--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <td>8622698</td>
   </tr>
   <tr>
-    <td>Rachel</td>
-    <td>718-555-1212</td>
-    <td>Chips</td>
+    <td>Los Angeles</td>
+    <td>California</td>
+    <td>3999759</td>
   </tr>
   <tr>
-    <td>Terrance</td>
-    <td>914-555-1212</td>
-    <td>Salsa</td>
+    <td>Chicago</td>
+    <td>lllinois</td>
+    <td>2716450</td>
   </tr>
 </table>
   
